List.getLast and List.getFirst is not supported in java 17